@@ -1,0 +1,38 @@
+#!@SHELL@
+
+#-------------------------------------------------------------------------------
+
+# This file is part of Code_Saturne, a general-purpose CFD tool.
+#
+# Copyright (C) 1998-2019 EDF S.A.
+#
+# This program is free software; you can redistribute it and/or modify it under
+# the terms of the GNU General Public License as published by the Free Software
+# Foundation; either version 2 of the License, or (at your option) any later
+# version.
+#
+# This program is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+# FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
+# details.
+#
+# You should have received a copy of the GNU General Public License along with
+# this program; if not, write to the Free Software Foundation, Inc., 51 Franklin
+# Street, Fifth Floor, Boston, MA 02110-1301, USA.
+
+#-------------------------------------------------------------------------------
+
+# Source environment
+source_env="@shell_env@"
+if test -f "$source_env" ; then
+  source "$source_env"
+else
+  cs_env_modules="@cs_env_modules@"
+  if test "x$cs_env_modules" != "xno" ; then
+    module purge
+    module load $cs_env_modules
+  fi
+fi
+
+bindir=`dirname $0`
+exec "@PYTHON@" "$bindir/code_saturne.py" $@
