@@ -95,6 +95,9 @@ Bug fixes
 Architectural changes
 ---------------------
 
+- Allow sourcing environment before launching with the
+  --with-shell-env configure option.
+
 - Update CGNS support for CGNS 3.4 compatibility.
 
 - Allow detection of Catalyst for ParaView versions above 5.6.
